@@ -1,3 +1,8 @@
+2005-02-03  Steve Harris  <steve@plugin.org.uk>
+
+	* server.c: made UDP messages resolve back to thier originating server,
+	  or something close to it.
+
 2005-02-03  Taybin Rutkin <taybin@earthlink.net>
 
 	* server.c: commited resource leak fix from Jesse Campbell
